bk_ida/gccida/c2/peep2_next_insn
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/peep2_next_insn/src/recog.c:3327:8: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
insn = peep2_insn_data_0[v1].insn; 
       ^~~~~~~~~~~~~~~~~
       peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/peep2_next_insn/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/peep2_next_insn/src/obj/recog.o] Error 1
